[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common-fun"
version = "0.2.0"
description = "A production-ready utility library with numeric, string, array, validation, converter, file, and CLI helpers."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
	{ name = "Amit Saini" }
]
keywords = ["utilities", "python", "helpers", "cli"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/amit-saini-21/common-fun"
[project.scripts]
common-fun = "common_fun.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["common_fun*"]
